Fix table button spacing on mobile devices

--- a/src/PanelStatusTable.css
+++ b/src/PanelStatusTable.css
@@ -1,7 +1,10 @@
 @media (max-width: 767px) {
-    .power-consumption-report--right-button {
+    .panel-status-table .buttons {
+        margin: 0 0.25rem 1rem 0 !important
+    }
+
+    .panel-status-table .right.floated.button {
         float: none !important;
-        margin-top: 1em !important;
         margin-left: 0 !important;
     }
 }
